packaged version with button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>OMNIVU Dashboard</title>
+  <meta charset="UTF-8">
+  <title>OmniView</title>
 </head>
 <body>
-  <h1>Welcome to OMNIVU</h1>
-  <p id="status">Checking backend status...</p>
+  <h1>OmniView: Satellite Analysis</h1>
+  
+  <button id="myButton">Click Me</button>
+  <p id="output"></p>
 
   <script src="renderer.js"></script>
 </body>
