--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>OmniView</title>
-</head>
-<body>
-  <h1>OmniView: Satellite Analysis</h1>
-  
-  <button id="myButton">Click Me</button>
-  <p id="output"></p>
+  <head>
+    <meta charset="UTF-8" />
+    <title>OmniView</title>
+  </head>
+  <body>
+    <h1>OmniView: Satellite Analysis</h1>
 
-  <script src="renderer.js"></script>
-</body>
+    <button id="myButton">Click Me</button>
+    <p id="output"></p>
+    <p id="status"></p>
+
+    <script src="renderer.js"></script>
+  </body>
 </html>
