Updated the project structure to maintain the project at ease

--- a/frontend/src/renderer/screens/monitoring/monitoring.html
+++ b/frontend/src/renderer/screens/monitoring/monitoring.html
@@ -67,7 +67,7 @@
         <div id="map"></div>
 
         <!-- Coordinates -->
-        <div class="coordinates" id="coordinates">18.5246° N, 73.8796° E</div>
+        <div class="coordinates" id="coordinates">--- ---° N, --- ---° E</div>
 
         <!-- Bottom Panel -->
         <div class="bottom-panel">
