added nlp report generation agent (refinment needed)

--- a/frontend/src/renderer/screens/disaster/disaster.html
+++ b/frontend/src/renderer/screens/disaster/disaster.html
@@ -64,6 +64,7 @@
               placeholder="Search for news, disasters, or alerts..."
             />
             <button class="search-btn" id="searchBtn">Search</button>
+            <button class="report-btn" id="reportBtn">Generate Report</button>
           </div>
         </div>
 
@@ -94,6 +95,13 @@
           <div class="news-results" id="newsResults">
             <div class="section-title" id="sectionTitle">Latest News</div>
             <div id="resultsContainer"></div>
+          </div>
+
+          <!-- Report Section -->
+          <div class="report-section" id="reportSection" style="display: none;">
+            <div class="section-title">Disaster Report</div>
+            <div id="reportContainer"></div>
+            <button class="download-btn" id="downloadReportBtn">Download Report</button>
           </div>
         </div>
 
